<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_container"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/montserrat"
                android:paddingTop="80dp"
                android:paddingBottom="100dp"
                android:text="@string/login_header"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/alertInfoFontColor"
                android:textSize="30dp"
                android:textStyle="bold" />
            <!--            android:background="@color/alertInfo"-->

            <EditText
                android:id="@+id/email_Login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:drawableLeft="@drawable/ic_mail"
                android:drawablePadding="7sp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password_Login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="7sp"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="3">

                <Button
                    android:id="@+id/login_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/buttons"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signup_btn"
                    android:layout_width="100sp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="150dp"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:text="@string/txt_signup"/>


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>